--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build http://futuristic-tank.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build http://high-offer.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
